--- a/notebooks/clustering_ex_02.ipynb
+++ b/notebooks/clustering_ex_02.ipynb
@@ -48,10 +48,11 @@
     "dataset (Adelie, Chinstrap, and Gentoo) further splitted by Sex (2 clusters\n",
     "for each species).\n",
     "\n",
-    "Repeat the same pipeline consisting of a `OneHotEncoder` for the \"Sex\" column,\n",
-    "a `StandardScaler` for the other columns. The final estimator should be\n",
-    "`KMeans` with `n_clusters=6`. You can set the `random_state` for\n",
-    "reproducibility, but that should not change the interpretation of the results."
+    "Repeat the same pipeline consisting of a `OneHotEncoder` with\n",
+    "`drop=\"if_binary\"` for the \"Sex\" column, a `StandardScaler` for the other\n",
+    "columns. The final estimator should be `KMeans` with `n_clusters=6`. You can\n",
+    "set the `random_state` for reproducibility, but that should not change the\n",
+    "interpretation of the results."
    ]
   },
   {
@@ -112,9 +113,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now use a `sklearn.preprocessing.LabelEncoder` to `fit_transform` the \"true\"\n",
-    "labels (coming from combinations of species and sex). What would be the accuracy\n",
-    "if we tried to use it to measure the agreement between both sets of labels?"
+    "Now use a\n",
+    "[`sklearn.preprocessing.LabelEncoder`](https://scikit-learn.org/stable/modules/generated/sklearn.preprocessing.LabelEncoder.html)\n",
+    "to `fit_transform` the \"true\" labels (coming from combinations of species and\n",
+    "sex). What would be the accuracy if we tried to use it to measure the\n",
+    "agreement between both sets of labels?"
    ]
   },
   {
@@ -123,14 +126,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.preprocessing import LabelEncoder\n",
-    "from sklearn.metrics import accuracy_score\n",
-    "\n",
-    "true_labels = LabelEncoder().fit_transform(species_and_sex_labels)\n",
-    "\n",
-    "cluster_labels = model.fit_predict(penguins)\n",
-    "acc = accuracy_score(true_labels, cluster_labels)\n",
-    "print(f\"Accuracy: {acc:.3f}\")"
+    "# Write your code here."
    ]
   },
   {
