--- a/notebooks/clustering_kmeans.ipynb
+++ b/notebooks/clustering_kmeans.ipynb
@@ -32,7 +32,6 @@
     "    \"Species\",\n",
     "]\n",
     "penguins = pd.read_csv(\"../datasets/penguins.csv\")[columns_to_keep].dropna()\n",
-    "# penguins = penguins[penguins[\"Sex\"] != \".\"].reset_index(drop=True)\n",
     "penguins[\"Species\"] = penguins[\"Species\"].str.split(\" \").str[0]\n",
     "penguins"
    ]
@@ -43,7 +42,7 @@
    "source": [
     "We know that this datasets contains data about 3 different species of\n",
     "penguins, but let's not rely on such information for the moment. Instead we\n",
-    "can addresse the task using clustering. This could be the case, for example,\n",
+    "can address the task using clustering. This could be the case, for example,\n",
     "when analyzing newly collected penguin data in the wild where species haven't\n",
     "yet been identified, or when the goal is to detect natural groupings such as\n",
     "subpopulations, hybrids, or other variations. It\u2019s also useful as a data\n",
@@ -221,13 +220,13 @@
    "metadata": {},
    "source": [
     "\n",
-    "We confirm then than, in the original units, the distances between data points\n",
-    "are almost entirely dominated by the \"Body Mass (g)\" feature, which has much\n",
-    "larger numerical values than the \"Culmen Length (mm)\" feature.\n",
+    "We thus confirm that, when using in the original units, the distances between\n",
+    "data points are almost entirely dominated by the \"Body Mass (g)\" feature,\n",
+    "which has much larger numerical values than the \"Culmen Length (mm)\" feature.\n",
     "\n",
     "To mitigate this problem, we can instead define a pipeline to scale the\n",
     "numerical features before clustering. This way, all features contribute\n",
-    "equally to the distance calculations."
+    "similarly to the distance calculations."
    ]
   },
   {
@@ -250,6 +249,15 @@
     "lines_to_next_cell": 2
    },
    "source": [
+    "\n",
+    "Notice that scaling features by their standard deviation using\n",
+    "`StandardScaler` is just one way to achieve this. Other options include\n",
+    "`RobustScaler`, `MinMaxScaler`, and several others, which work similarly but\n",
+    "may behave differently depending on the data. For more details, refer to the\n",
+    "[preprocessing data](\n",
+    "https://scikit-learn.org/stable/modules/preprocessing.html) section in the\n",
+    "scikit-learn user guide.\n",
+    "\n",
     "To avoid repeating the code for plotting, we can define a helper\n",
     "function as follows:"
    ]
