--- a/notebooks/clustering_sol_01.ipynb
+++ b/notebooks/clustering_sol_01.ipynb
@@ -36,7 +36,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can explore the data using a seborn `pairplot`."
+    "We can explore the data using a seaborn `pairplot`."
    ]
   },
   {
@@ -70,17 +70,16 @@
    "outputs": [],
    "source": [
     "# solution\n",
-    "import matplotlib.pyplot as plt\n",
     "from sklearn.cluster import KMeans\n",
     "\n",
     "n_clusters_values = [2, 3, 4]\n",
     "\n",
     "for n_clusters in n_clusters_values:\n",
-    "    model = KMeans(n_clusters=n_clusters, random_state=0)\n",
+    "    model = KMeans(n_clusters=n_clusters)\n",
     "    clustered_data = data.copy()\n",
     "    clustered_data[\"cluster label\"] = model.fit_predict(data)\n",
-    "    sns.pairplot(clustered_data, hue=\"cluster label\", palette=\"tab10\")\n",
-    "    plt.title(f\"n_clusters={n_clusters}\")"
+    "    grid = sns.pairplot(clustered_data, hue=\"cluster label\", palette=\"tab10\")\n",
+    "    grid.figure.suptitle(f\"n_clusters={n_clusters}\", y=1.08)"
    ]
   },
   {
@@ -96,16 +95,14 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Create a pipeline composed by a `StandardScaler` followed by a `KMeans` step\n",
-    "# as the final predictor. Set the `random_state` of `KMeans` for\n",
-    "# reproducibility. Then, make a plot of the WCSS or inertia for `n_clusters`\n",
-    "# varying from 1 to 10. You can use the following helper function for such\n",
-    "# purpose:"
+    "Create a pipeline composed by a `StandardScaler` followed by a `KMeans` step\n",
+    "as the final predictor. Set the `random_state` of `KMeans` for\n",
+    "reproducibility. Then, make a plot of the WCSS or inertia for `n_clusters`\n",
+    "varying from 1 to 10. You can use the following helper function for such\n",
+    "purpose:"
    ]
   },
   {
@@ -114,6 +111,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import matplotlib.pyplot as plt\n",
     "from sklearn.metrics import silhouette_score\n",
     "\n",
     "\n",
@@ -176,7 +174,7 @@
     "from sklearn.pipeline import make_pipeline\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "\n",
-    "model = make_pipeline(StandardScaler(), KMeans(random_state=0))\n",
+    "model = make_pipeline(StandardScaler(), KMeans())\n",
     "model"
    ]
   },
@@ -192,21 +190,36 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "tags": [
+     "solution"
+    ]
+   },
+   "source": [
+    "\n",
+    "The WCSS plot may or may not present a well-defined elbow, depending of the\n",
+    "random initialization of the centroids in k-means."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's check if the best choice of n_clusters remains stable when resampling\n",
-    "the dataset. For such purpose:\n",
-    "- Keep a fixed `random_state` for the `KMeans` step to isolate the effect of\n",
-    "  data resampling.\n",
-    "- Generate resamplings consisting of 50% of the data by using\n",
-    "  `train_test_split` with `train_size=0.5`. Changing the `random_state`\n",
-    "  to do the split leads to different resamplings.\n",
+    "Let's see if we can find one or more stable candidates for `n_clusters` using\n",
+    "the elbow method when resampling the dataset. For such purpose:\n",
+    "- Generate randomly resampled data consisting of 50% of the data by using\n",
+    "  `train_test_split` with `train_size=0.5`. Changing the `random_state` to do\n",
+    "  the split leads to different samples.\n",
     "- Use the `plot_n_clusters_scores` function inside a `for` loop to make\n",
     "  multiple overlapping plots of the inertia, each time using a different\n",
-    "  resampling. 10 resamplings should be enough to draw conclusions.\n",
+    "  resampling. 10 resampling iterations should be enough to draw conclusions.\n",
+    "- You can choose to set the `random_state` value of the `KMeans` step, but be\n",
+    "  aware that even if we fix `random_state=0` in all resampling iterations,\n",
+    "  k-means will still choose different initial centroids for different data\n",
+    "  samples, so fixing it or not should not change the conclusions w.r.t. to\n",
+    "  stability to resampling.\n",
     "\n",
-    "Is the elbow (optimal number of clusters) stable across all different\n",
-    "resamplings?"
+    "Is the elbow (optimal number of clusters) stable when resampling?"
    ]
   },
   {
@@ -248,7 +261,7 @@
    "metadata": {},
    "source": [
     "By default, `KMeans` uses a smart selection of the initial centroids called\n",
-    "\"k-means++\". Instead of picking points completly at random, it tries several\n",
+    "\"k-means++\". Instead of picking points completely at random, it tries several\n",
     "candidate centroids at each step and picks the best ones based on an\n",
     "estimation of how much they would help reduce the overall inertia. This method\n",
     "improves the chances of finding better cluster centroids and speeds up\n",
@@ -262,9 +275,9 @@
     "data is unevenly distributed) where increasing `n_init` may help ensuring a\n",
     "global minimal inertia.\n",
     "\n",
-    "Repeat the previous example but setting `n_init=5`. Remeber to fix the\n",
+    "Repeat the previous example but setting `n_init=5`. Remember to fix the\n",
     "`random_state` for the `KMeans` initialization to only estimate the\n",
-    "variability related to resamplings of the data. Are the resulting inertia\n",
+    "variability related to the resampling of the data. Are the resulting inertia\n",
     "curves more stable?"
    ]
   },
@@ -337,7 +350,9 @@
     "        data_subsample,\n",
     "        score_type=\"silhouette\",\n",
     "        alpha=0.2,\n",
-    "        title=\"Stability of silhouette score\\nwith n_init=5 and StandardScaler\",\n",
+    "        title=(\n",
+    "            \"Stability of silhouette score\\nwith n_init=5 and StandardScaler\"\n",
+    "        ),\n",
     "    )"
    ]
   },
@@ -361,11 +376,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "\n",
     "Once again repeat the experiment to determine the stability of the optimal\n",
     "number of clusters. This time, instead of using a `StandardScaler`, use a\n",
-    "`QuantileTransformer` with default parameters as the preprocessing step in the\n",
-    "pipeline. For the `KMeans` step, keep `n_init=5` and a fixed `random_state`.\n",
-    "What happens in terms of silhouette score?"
+    "`QuantileTransformer` with default parameters as the preprocessing step in\n",
+    "the pipeline. Contrary to `StandardScaler`, `QuantileTransformer` is a\n",
+    "nonlinear transformation that maps the features with a long tail\n",
+    "distributions to a uniform distribution, which is the case for the\n",
+    "\"frequency\" and \"monetary\" features in the RFM dataset.\n",
+    "\n",
+    "For the `KMeans` step, keep `n_init=5`.\n",
+    "\n",
+    "What happens in terms of silhouette score? Does this make it possible to\n",
+    "identify stable and qualitatively interesting clusters in this data?"
    ]
   },
   {
@@ -374,6 +397,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# solution\n",
     "from sklearn.preprocessing import QuantileTransformer\n",
     "\n",
     "model = make_pipeline(QuantileTransformer(), KMeans(n_init=5, random_state=0))\n",
@@ -386,7 +410,10 @@
     "        data_subsample,\n",
     "        score_type=\"silhouette\",\n",
     "        alpha=0.2,\n",
-    "        title=\"Stability of silhouette score\\nwith n_init=5 and QuantileTransformer\",\n",
+    "        title=(\n",
+    "            \"Stability of silhouette score\\nwith n_init=5 and\"\n",
+    "            \" QuantileTransformer\"\n",
+    "        ),\n",
     "    )"
    ]
   },
@@ -398,15 +425,15 @@
     ]
    },
    "source": [
-    "The silhouette score is much more stable across resamplings. Moreover, the\n",
-    "optimal number of clusters seems to be 2, as it provides the highest score,\n",
-    "indicating that the data points are well-separated and correctly grouped with\n",
-    "good cohesion. However 4 or 6 clusters may still make sense if the clustering\n",
-    "has specific use cases or domain relevance.\n",
+    "\n",
+    "The silhouette score is a bit more stable under resampling. Moreover, the\n",
+    "optimal number of clusters seems to be 2, as it provides the highest score.\n",
+    "However 4 or 6 clusters may still make sense if the clustering has specific\n",
+    "use cases or domain relevance.\n",
     "\n",
     "Notice that you should still be cautious as the relatively low values of the\n",
-    "silhouette scores suggest that some points may be \"misassigned\". To verify\n",
-    "this, we can plot the labels when setting `n_clusters=6`."
+    "silhouette scores suggest that clusters are not well separated or not dense\n",
+    "enough. To verify this, we can plot the labels when setting `n_clusters=6`."
    ]
   },
   {
@@ -419,11 +446,11 @@
    },
    "outputs": [],
    "source": [
-    "n_clusters=6\n",
+    "n_clusters = 6\n",
     "model = make_pipeline(\n",
     "    QuantileTransformer(),\n",
     "    KMeans(n_init=5, n_clusters=n_clusters, random_state=0),\n",
-    ")\n",
+    ").set_output(transform=\"pandas\")\n",
     "model"
    ]
   },
@@ -437,11 +464,13 @@
    },
    "outputs": [],
    "source": [
-    "clustered_data = data.copy()\n",
-    "clustered_data[\"cluster label\"] = model.fit_predict(data)\n",
+    "cluster_labels = model.fit_predict(data)\n",
     "\n",
-    "sns.pairplot(clustered_data, hue=\"cluster label\", palette=\"tab10\")\n",
-    "plt.title(f\"n_clusters={n_clusters}\")"
+    "_ = sns.pairplot(\n",
+    "    model[:-1].transform(data).assign(cluster_labels=cluster_labels),\n",
+    "    hue=\"cluster_labels\",\n",
+    "    palette=\"tab10\",\n",
+    ")"
    ]
   },
   {
@@ -452,12 +481,9 @@
     ]
    },
    "source": [
-    "Indeed, \"monetary\" exactly equal to 0 is divided into 2 clusters (the plot in\n",
-    "the middle of the `pairplot`), whereas it would feel more reasonably to have\n",
-    "those points form a single cluster.\n",
     "\n",
-    "Alternatively, we can plot the labels in the transformed space to better\n",
-    "observe that some data points seem to be misassigned."
+    "Since we have 3 dimensions, we can try to visualize the cluster labels using\n",
+    "a 3D projection directly:"
    ]
   },
   {
@@ -472,21 +498,21 @@
    "source": [
     "from matplotlib.colors import ListedColormap\n",
     "\n",
-    "cluster_labels = model.fit_predict(data)\n",
-    "cmap = ListedColormap(plt.get_cmap(\"tab10\").colors[:n_clusters])\n",
-    "\n",
     "fig, ax = plt.subplots(figsize=(8, 8), subplot_kw={\"projection\": \"3d\"})\n",
+    "ax.view_init(azim=80)\n",
+    "\n",
+    "cmap = ListedColormap(plt.get_cmap(\"tab10\").colors[:n_clusters])\n",
     "scatter = ax.scatter(\n",
-    "    *model[:-1].transform(data).T,\n",
+    "    *model[:-1].transform(data).values.T,\n",
     "    c=cluster_labels,\n",
     "    cmap=cmap,\n",
     "    s=50,\n",
     "    alpha=0.7,\n",
     ")\n",
     "ax.set_box_aspect(None, zoom=0.84)\n",
-    "ax.set_xlabel(\"Transformed Monetary\", labelpad=15)\n",
-    "ax.set_ylabel(\"Transformed Frequency\", labelpad=15)\n",
-    "ax.set_zlabel(\"Transformed Recency\", labelpad=15)\n",
+    "ax.set_xlabel(f\"Transformed {data.columns[0]}\", labelpad=15)\n",
+    "ax.set_ylabel(f\"Transformed {data.columns[1]}\", labelpad=15)\n",
+    "ax.set_zlabel(f\"Transformed {data.columns[2]}\", labelpad=15)\n",
     "ax.set_title(\"Clusters in quantile-transformed space\", y=0.99)\n",
     "_ = plt.tight_layout()"
    ]
@@ -499,20 +525,27 @@
     ]
    },
    "source": [
-    "Observe that the clusters at \"transformed monetary\" exactly equal to 0 are\n",
-    "grouped together with samples with low but non-zero values of \"transformed\n",
-    "monetary\", that would belong more naturally to other clusters.\n",
     "\n",
-    "What happens here is that data points at \"transformed monetary\" equal to 0 are\n",
-    "not isotropic in the 3 dimensions, i.e. they are spread on a plane of\n",
-    "\"transformed recency\" and \"transformed frequency\" ranging from 0 to 1.\n",
-    "Remember that k-means consists of minimizing each point's euclidean distance\n",
-    "to its assigned centroid. As a consequence, k-means is more appropriate for\n",
-    "clusters that are isotropic and normally distributed, in other words, that\n",
-    "group around a center.\n",
+    "The general impression from this study is that k-means fails to find\n",
+    "well-separated clusters in this dataset regardless of the preprocessing\n",
+    "method used.\n",
     "\n",
-    "We will learn more about how to deal with anisotropic clusters in a future\n",
-    "notebook."
+    "We can observe that the quantile-transformed data has a structure of layered\n",
+    "planes because of the discrete integer levels for the lowest values of the\n",
+    "\"Frequency\" feature which are overrepresented in the dataset.\n",
+    "\n",
+    "One could try more advanced kinds of preprocessing, or even, clustering\n",
+    "algorithms that favor different kinds of shapes, however, by looking at the\n",
+    "pairplot above we can draw the following conclusions:\n",
+    "- The discrete layers visible for the lowest values of the \"frequency\"\n",
+    "  feature are not that interesting to treat as clusters by themselves because\n",
+    "  they do not relate to visible structure involving the other two features;\n",
+    "- If we ignore the \"frequency\" feature, we can observe no significant cluster\n",
+    "  structure in the \"recency\" and \"monetary\" 2D space.\n",
+    "\n",
+    "In conclusion, the data does not have a clear cluster structure, and this\n",
+    "explains why we could not find strong and stable values for the silhouette\n",
+    "score under resampling."
    ]
   }
  ],
