--- a/notebooks/clustering_sol_02.ipynb
+++ b/notebooks/clustering_sol_02.ipynb
@@ -48,10 +48,11 @@
     "dataset (Adelie, Chinstrap, and Gentoo) further splitted by Sex (2 clusters\n",
     "for each species).\n",
     "\n",
-    "Repeat the same pipeline consisting of a `OneHotEncoder` for the \"Sex\" column,\n",
-    "a `StandardScaler` for the other columns. The final estimator should be\n",
-    "`KMeans` with `n_clusters=6`. You can set the `random_state` for\n",
-    "reproducibility, but that should not change the interpretation of the results."
+    "Repeat the same pipeline consisting of a `OneHotEncoder` with\n",
+    "`drop=\"if_binary\"` for the \"Sex\" column, a `StandardScaler` for the other\n",
+    "columns. The final estimator should be `KMeans` with `n_clusters=6`. You can\n",
+    "set the `random_state` for reproducibility, but that should not change the\n",
+    "interpretation of the results."
    ]
   },
   {
@@ -172,16 +173,21 @@
     ]
    },
    "source": [
-    "This value is very close to 1.0, which indicates a very strong agreement."
+    "This value is very close to 1.0, which indicates a very strong agreement.\n",
+    "This confirms our visual intuition that the 6 clusters found by k-means\n",
+    "nearly exactly correspond to the species crossed with the sex of the\n",
+    "penguins."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now use a `sklearn.preprocessing.LabelEncoder` to `fit_transform` the \"true\"\n",
-    "labels (coming from combinations of species and sex). What would be the accuracy\n",
-    "if we tried to use it to measure the agreement between both sets of labels?"
+    "Now use a\n",
+    "[`sklearn.preprocessing.LabelEncoder`](https://scikit-learn.org/stable/modules/generated/sklearn.preprocessing.LabelEncoder.html)\n",
+    "to `fit_transform` the \"true\" labels (coming from combinations of species and\n",
+    "sex). What would be the accuracy if we tried to use it to measure the\n",
+    "agreement between both sets of labels?"
    ]
   },
   {
@@ -190,6 +196,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# solution\n",
     "from sklearn.preprocessing import LabelEncoder\n",
     "from sklearn.metrics import accuracy_score\n",
     "\n",
@@ -255,10 +262,11 @@
    },
    "source": [
     "AMI stays the same because the cluster structure has not changed, only the\n",
-    "labels' names.\n",
+    "labels' names: AMI is invariant to a random permutation of the labels.\n",
     "\n",
-    "The accuracy changes because some labels may no longer match the ground truth\n",
-    "numerically, and some may match just by chance."
+    "The accuracy changes because it is only meaningful when the ordering of the\n",
+    "clustering labels have been mapped correctly to ordering the human labels\n",
+    "which has very little chance of happening when randomly permuting the labels."
    ]
   },
   {
@@ -281,10 +289,10 @@
    "outputs": [],
    "source": [
     "# solution\n",
-    "random_labels = rng.randint(0, len(unique_labels), size=len(species))\n",
-    "ami_random = adjusted_mutual_info_score(true_labels, random_labels)\n",
-    "\n",
-    "print(f\"AMI (random labels): {ami_random:.3f}\")"
+    "for _ in range(10):\n",
+    "    random_labels = rng.randint(0, len(unique_labels), size=len(species))\n",
+    "    ami_random = adjusted_mutual_info_score(true_labels, random_labels)\n",
+    "    print(f\"AMI (random labels): {ami_random:.3f}\")"
    ]
   },
   {
@@ -295,8 +303,8 @@
     ]
    },
    "source": [
-    "We observe a value close to zero. Changing the `RandomState` can lead\n",
-    "to positive or negative values of AMI."
+    "We observe either positive or negative values but always very close to zero\n",
+    "depending the particular random labels generated."
    ]
   },
   {
