--- a/notebooks/clustering_transformer.ipynb
+++ b/notebooks/clustering_transformer.ipynb
@@ -26,7 +26,8 @@
    "source": [
     "from sklearn.datasets import fetch_california_housing\n",
     "\n",
-    "data, target = fetch_california_housing(return_X_y=True, as_frame=True)"
+    "data, target = fetch_california_housing(return_X_y=True, as_frame=True)\n",
+    "target *= 100  # rescale the target in k$"
    ]
   },
   {
@@ -44,38 +45,36 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "from sklearn.model_selection import train_test_split, cross_validate\n",
+    "from sklearn.model_selection import train_test_split, cross_val_score\n",
     "from sklearn.pipeline import make_pipeline\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.linear_model import Ridge\n",
-    "from sklearn.compose import ColumnTransformer\n",
+    "from sklearn.compose import make_column_transformer\n",
     "\n",
     "data_train, data_test, target_train, target_test = train_test_split(\n",
     "    data, target, test_size=0.2, random_state=0\n",
     ")\n",
     "geo_columns = [\"Latitude\", \"Longitude\"]\n",
     "model_drop_geo = make_pipeline(\n",
-    "    ColumnTransformer(\n",
-    "        [\n",
-    "            (\"geo\", \"drop\", geo_columns),\n",
-    "        ],\n",
-    "        remainder=\"passthrough\",\n",
-    "    ),\n",
+    "    make_column_transformer((\"drop\", geo_columns), remainder=\"passthrough\"),\n",
     "    StandardScaler(),\n",
     "    Ridge(alpha=1e-12),\n",
     ")\n",
-    "cv_results_drop_geo = cross_validate(\n",
-    "    model_drop_geo, data_train, target_train, scoring=\"r2\"\n",
+    "test_error_drop_geo = -cross_val_score(\n",
+    "    model_drop_geo, data_train, target_train, scoring=\"neg_mean_absolute_error\"\n",
     ")\n",
-    "pd.DataFrame(cv_results_drop_geo).describe()"
+    "print(\n",
+    "    \"The test MAE without geographical features is: \"\n",
+    "    f\"{test_error_drop_geo.mean():.2f} \u00b1 {test_error_drop_geo.std():.2f} k$\"\n",
+    ")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We observe a score of approximately 54% of the variance is explained by the\n",
-    "non-geographical features.\n",
+    "We observe a Mean Absolute Error of approximately 57k$ when dropping the\n",
+    "geographical features.\n",
     "\n",
     "As seen in the previous notebook, we suspect that the price information may be\n",
     "linked to the distance to the nearest urban center, and proximity to the\n",
@@ -90,29 +89,24 @@
    "source": [
     "import plotly.express as px\n",
     "\n",
-    "\n",
-    "def plot_map(df, color_feature):\n",
-    "    fig = px.scatter_mapbox(\n",
-    "        df,\n",
-    "        lat=\"Latitude\",\n",
-    "        lon=\"Longitude\",\n",
-    "        color=color_feature,\n",
-    "        zoom=5,\n",
-    "        height=600,\n",
-    "    )\n",
-    "    fig.update_layout(\n",
-    "        mapbox_style=\"open-street-map\",\n",
-    "        mapbox_center={\n",
-    "            \"lat\": df[\"Latitude\"].mean(),\n",
-    "            \"lon\": df[\"Longitude\"].mean(),\n",
-    "        },\n",
-    "        margin={\"r\": 0, \"t\": 0, \"l\": 0, \"b\": 0},\n",
-    "    )\n",
-    "    return fig\n",
-    "\n",
-    "\n",
-    "fig = plot_map(data, target)\n",
-    "fig"
+    "fig = px.scatter_map(\n",
+    "    data,\n",
+    "    lat=\"Latitude\",\n",
+    "    lon=\"Longitude\",\n",
+    "    color=target,\n",
+    "    zoom=5,\n",
+    "    height=600,\n",
+    "    labels={\"color\": \"price (k$)\"},\n",
+    ")\n",
+    "fig.update_layout(\n",
+    "    mapbox_style=\"open-street-map\",\n",
+    "    mapbox_center={\n",
+    "        \"lat\": data[\"Latitude\"].mean(),\n",
+    "        \"lon\": data[\"Longitude\"].mean(),\n",
+    "    },\n",
+    "    margin={\"r\": 0, \"t\": 0, \"l\": 0, \"b\": 0},\n",
+    ")\n",
+    "fig.show(renderer=\"notebook\")"
    ]
   },
   {
@@ -130,10 +124,16 @@
    "outputs": [],
    "source": [
     "model_naive_geo = make_pipeline(StandardScaler(), Ridge(alpha=1e-12))\n",
-    "cv_results_naive_geo = cross_validate(\n",
-    "    model_naive_geo, data_train, target_train, scoring=\"r2\"\n",
+    "test_error_naive_geo = -cross_val_score(\n",
+    "    model_naive_geo,\n",
+    "    data_train,\n",
+    "    target_train,\n",
+    "    scoring=\"neg_mean_absolute_error\",\n",
     ")\n",
-    "pd.DataFrame(cv_results_naive_geo).describe()"
+    "print(\n",
+    "    \"The test MAE with raw geographical features is: \"\n",
+    "    f\"{test_error_naive_geo.mean():.2f} \u00b1 {test_error_naive_geo.std():.2f} k$\"\n",
+    ")"
    ]
   },
   {
@@ -146,11 +146,10 @@
     "\n",
     "We could look for a dataset containing all the coordinates of the city\n",
     "centers, the coast line and other points of interest in California, then\n",
-    "manually engineer such features. However this would require a non-tricial\n",
-    "amount of code. Instead we can rely on the K-means class to achieve something\n",
-    "similar implicitly: we will configure K-means to find a large number of\n",
-    "centroids from our housing data directly and consider each centroid a\n",
-    "potential point of interest.\n",
+    "manually engineer such features. However this would require a non-trivial\n",
+    "amount of code. Instead we can rely on K-means to achieve something similar\n",
+    "implicitly: we use it to find a large number of centroids from the housing\n",
+    "data directly and consider each centroid a potential point of interest.\n",
     "\n",
     "The `KMeans` class implements a `transform` method that, given a set of data\n",
     "points as an argument, computes the distance to the nearest centroid for each\n",
@@ -169,27 +168,34 @@
     "from sklearn.pipeline import make_pipeline\n",
     "\n",
     "model_cluster_geo = make_pipeline(\n",
-    "    ColumnTransformer(\n",
-    "        [\n",
-    "            (\"geo\", KMeans(n_clusters=100), geo_columns),\n",
-    "        ],\n",
+    "    make_column_transformer(\n",
+    "        (KMeans(n_clusters=100), geo_columns),\n",
     "        remainder=\"passthrough\",\n",
+    "        force_int_remainder_cols=False,  # Silence a warning in scikit-learn v1.6\n",
     "    ),\n",
     "    StandardScaler(),\n",
     "    Ridge(alpha=1e-12),\n",
     ")\n",
-    "cv_results_cluster_geo = cross_validate(\n",
-    "    model_cluster_geo, data_train, target_train, scoring=\"r2\"\n",
+    "test_error_cluster_geo = -cross_val_score(\n",
+    "    model_cluster_geo,\n",
+    "    data_train,\n",
+    "    target_train,\n",
+    "    scoring=\"neg_mean_absolute_error\",\n",
     ")\n",
-    "pd.DataFrame(cv_results_cluster_geo).describe()"
+    "print(\n",
+    "    \"The test MAE with clustered geographical features is:\"\n",
+    "    f\" {test_error_cluster_geo.mean():.2f} \u00b1\"\n",
+    "    f\" {test_error_cluster_geo.std():.2f} k$\"\n",
+    ")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can use a grid-search to tune `n_clusters` in this supervised\n",
-    "pipeline."
+    "The resulting mean test error is much lower. Furthermore, `KMeans` is now part\n",
+    "of a supervised pipeline, which means we can use a grid-search to tune\n",
+    "`n_clusters` as we have learned in previous modules of this course."
    ]
   },
   {
@@ -200,10 +206,10 @@
    "source": [
     "from sklearn.model_selection import GridSearchCV\n",
     "\n",
-    "param_name = \"columntransformer__geo__n_clusters\"\n",
+    "param_name = \"columntransformer__kmeans__n_clusters\"\n",
     "param_grid = {param_name: [10, 30, 100, 300, 1_000, 3_000]}\n",
     "grid_search = GridSearchCV(\n",
-    "    model_cluster_geo, param_grid=param_grid, scoring=\"r2\"\n",
+    "    model_cluster_geo, param_grid=param_grid, scoring=\"neg_mean_absolute_error\"\n",
     ")\n",
     "grid_search.fit(data_train, target_train)"
    ]
@@ -224,10 +230,15 @@
     "    \"param_\" + param_name,\n",
     "]\n",
     "grid_search_results = pd.DataFrame(grid_search.cv_results_)[results_columns]\n",
-    "grid_search_results = grid_search_results.rename(\n",
-    "    columns={\"param_\" + param_name: \"n_clusters\"}\n",
-    ").round(3)\n",
-    "grid_search_results.sort_values(\"mean_test_score\", ascending=False)"
+    "grid_search_results[\"mean_test_error\"] = -grid_search_results[\n",
+    "    \"mean_test_score\"\n",
+    "]\n",
+    "grid_search_results = (\n",
+    "    grid_search_results.drop(columns=[\"mean_test_score\"])\n",
+    "    .rename(columns={\"param_\" + param_name: \"n_clusters\"})\n",
+    "    .round(3)\n",
+    ")\n",
+    "grid_search_results.sort_values(\"mean_test_error\", ascending=False)"
    ]
   },
   {
@@ -246,12 +257,12 @@
    "source": [
     "labels = {\n",
     "    \"mean_fit_time\": \"CV fit time (s)\",\n",
-    "    \"mean_test_score\": \"CV score (R2)\",\n",
+    "    \"mean_test_error\": \"CV score (MAE)\",\n",
     "}\n",
     "fig = px.scatter(\n",
     "    grid_search_results,\n",
     "    x=\"mean_fit_time\",\n",
-    "    y=\"mean_test_score\",\n",
+    "    y=\"mean_test_error\",\n",
     "    error_x=\"std_fit_time\",\n",
     "    error_y=\"std_test_score\",\n",
     "    hover_data=grid_search_results.columns,\n",
@@ -266,7 +277,7 @@
     "        \"yanchor\": \"top\",\n",
     "    }\n",
     ")\n",
-    "fig"
+    "fig.show(renderer=\"notebook\")"
    ]
   },
   {
@@ -283,8 +294,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "best_n_clusters = grid_search.best_params_[param_name]\n",
     "print(\n",
-    "    f\"Final model test R2 score: {grid_search.score(data_test, target_test):.3f}\"\n",
+    "    f\"The test MAE with {best_n_clusters} clusters is: \"\n",
+    "    f\"{-grid_search.score(data_test, target_test):.3f} k$\"\n",
     ")"
    ]
   },
