--- a/notebooks/clustering_ex_01.ipynb
+++ b/notebooks/clustering_ex_01.ipynb
@@ -36,7 +36,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can explore the data using a seborn `pairplot`."
+    "We can explore the data using a seaborn `pairplot`."
    ]
   },
   {
@@ -73,24 +73,25 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Create a pipeline composed by a `StandardScaler` followed by a `KMeans` step\n",
-    "# as the final predictor. Set the `random_state` of `KMeans` for\n",
-    "# reproducibility. Then, make a plot of the WCSS or inertia for `n_clusters`\n",
-    "# varying from 1 to 10. You can use the following helper function for such\n",
-    "# purpose:"
+    "Create a pipeline composed by a `StandardScaler` followed by a `KMeans` step\n",
+    "as the final predictor. Set the `random_state` of `KMeans` for\n",
+    "reproducibility. Then, make a plot of the WCSS or inertia for `n_clusters`\n",
+    "varying from 1 to 10. You can use the following helper function for such\n",
+    "purpose:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "lines_to_next_cell": 2
+   },
    "outputs": [],
    "source": [
+    "import matplotlib.pyplot as plt\n",
     "from sklearn.metrics import silhouette_score\n",
     "\n",
     "\n",
@@ -156,19 +157,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's check if the best choice of n_clusters remains stable when resampling\n",
-    "the dataset. For such purpose:\n",
-    "- Keep a fixed `random_state` for the `KMeans` step to isolate the effect of\n",
-    "  data resampling.\n",
-    "- Generate resamplings consisting of 50% of the data by using\n",
-    "  `train_test_split` with `train_size=0.5`. Changing the `random_state`\n",
-    "  to do the split leads to different resamplings.\n",
+    "Let's see if we can find one or more stable candidates for `n_clusters` using\n",
+    "the elbow method when resampling the dataset. For such purpose:\n",
+    "- Generate randomly resampled data consisting of 50% of the data by using\n",
+    "  `train_test_split` with `train_size=0.5`. Changing the `random_state` to do\n",
+    "  the split leads to different samples.\n",
     "- Use the `plot_n_clusters_scores` function inside a `for` loop to make\n",
     "  multiple overlapping plots of the inertia, each time using a different\n",
-    "  resampling. 10 resamplings should be enough to draw conclusions.\n",
+    "  resampling. 10 resampling iterations should be enough to draw conclusions.\n",
+    "- You can choose to set the `random_state` value of the `KMeans` step, but be\n",
+    "  aware that even if we fix `random_state=0` in all resampling iterations,\n",
+    "  k-means will still choose different initial centroids for different data\n",
+    "  samples, so fixing it or not should not change the conclusions w.r.t. to\n",
+    "  stability to resampling.\n",
     "\n",
-    "Is the elbow (optimal number of clusters) stable across all different\n",
-    "resamplings?"
+    "Is the elbow (optimal number of clusters) stable when resampling?"
    ]
   },
   {
@@ -185,7 +188,7 @@
    "metadata": {},
    "source": [
     "By default, `KMeans` uses a smart selection of the initial centroids called\n",
-    "\"k-means++\". Instead of picking points completly at random, it tries several\n",
+    "\"k-means++\". Instead of picking points completely at random, it tries several\n",
     "candidate centroids at each step and picks the best ones based on an\n",
     "estimation of how much they would help reduce the overall inertia. This method\n",
     "improves the chances of finding better cluster centroids and speeds up\n",
@@ -199,9 +202,9 @@
     "data is unevenly distributed) where increasing `n_init` may help ensuring a\n",
     "global minimal inertia.\n",
     "\n",
-    "Repeat the previous example but setting `n_init=5`. Remeber to fix the\n",
+    "Repeat the previous example but setting `n_init=5`. Remember to fix the\n",
     "`random_state` for the `KMeans` initialization to only estimate the\n",
-    "variability related to resamplings of the data. Are the resulting inertia\n",
+    "variability related to the resampling of the data. Are the resulting inertia\n",
     "curves more stable?"
    ]
   },
@@ -237,11 +240,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "\n",
     "Once again repeat the experiment to determine the stability of the optimal\n",
     "number of clusters. This time, instead of using a `StandardScaler`, use a\n",
-    "`QuantileTransformer` with default parameters as the preprocessing step in the\n",
-    "pipeline. For the `KMeans` step, keep `n_init=5` and a fixed `random_state`.\n",
-    "What happens in terms of silhouette score?"
+    "`QuantileTransformer` with default parameters as the preprocessing step in\n",
+    "the pipeline. Contrary to `StandardScaler`, `QuantileTransformer` is a\n",
+    "nonlinear transformation that maps the features with a long tail\n",
+    "distributions to a uniform distribution, which is the case for the\n",
+    "\"frequency\" and \"monetary\" features in the RFM dataset.\n",
+    "\n",
+    "For the `KMeans` step, keep `n_init=5`.\n",
+    "\n",
+    "What happens in terms of silhouette score? Does this make it possible to\n",
+    "identify stable and qualitatively interesting clusters in this data?"
    ]
   },
   {
@@ -250,20 +261,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.preprocessing import QuantileTransformer\n",
-    "\n",
-    "model = make_pipeline(QuantileTransformer(), KMeans(n_init=5, random_state=0))\n",
-    "for random_state in range(1, 11):\n",
-    "    data_subsample, _ = train_test_split(\n",
-    "        data, train_size=0.5, random_state=random_state\n",
-    "    )\n",
-    "    plot_n_clusters_scores(\n",
-    "        model,\n",
-    "        data_subsample,\n",
-    "        score_type=\"silhouette\",\n",
-    "        alpha=0.2,\n",
-    "        title=\"Stability of silhouette score\\nwith n_init=5 and QuantileTransformer\",\n",
-    "    )"
+    "# Write your code here."
    ]
   }
  ],
