--- a/notebooks/ensemble_bagging.ipynb
+++ b/notebooks/ensemble_bagging.ipynb
@@ -113,7 +113,7 @@
     "lines_to_next_cell": 2
    },
    "source": [
-    "Let's see how we can use bootstraping to learn several trees.\n",
+    "Let's see how we can use bootstrapping to learn several trees.\n",
     "\n",
     "## Bootstrap resampling\n",
     "\n",
