--- a/notebooks/parameter_tuning_grid_search.ipynb
+++ b/notebooks/parameter_tuning_grid_search.ipynb
@@ -371,8 +371,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "With only 2 parameters, we might want to visualize the grid-search as a\n",
-    "heatmap. We need to transform our `cv_results` into a dataframe where:\n",
+    "Given that we are tuning only 2 parameters, we can visualize the results as a\n",
+    "heatmap. To do so, we first need to reshape the `cv_results` into a dataframe\n",
+    "where:\n",
     "\n",
     "- the rows correspond to the learning-rate values;\n",
     "- the columns correspond to the maximum number of leaf;\n",
@@ -398,7 +399,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can use a heatmap representation to show the above dataframe visually."
+    "Now that we have the data in the right format, we can create the heatmap as\n",
+    "follows:"
    ]
   },
   {
@@ -424,6 +426,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "The heatmap above shows the mean test accuracy (i.e., the average over\n",
+    "cross-validation splits) for each combination of hyperparameters, where darker\n",
+    "colors indicate better performance. However, notice that using colors only\n",
+    "allows us to visually compare the mean test score, but does not carry any\n",
+    "information on the standard deviation over splits, making it difficult to say\n",
+    "if different scores coming from different combinations lead to a significantly\n",
+    "better model or not.\n",
+    "\n",
     "The above tables highlights the following things:\n",
     "\n",
     "* for too high values of `learning_rate`, the generalization performance of\n",
